src/components/PostIt.css
.post-it {
  position: relative;
  font-family: 'Just Another Hand', cursive;
  width: 350px;
  height: 225px;
  margin: 10px 10px;
  padding: 4px 4px;
  border: 1px solid black;
}

.title-container {
  display: flex;
  justify-content: space-between;
}

.title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 265px;
  border-bottom: 1px solid black;
}

.description {
  contain: strict;
  overflow: scroll;
  padding-top: 2px;
  height: 170px;
}

.category {
  border-top: 1px solid black;
  width: 98%;
  position: absolute;
  bottom: 0;
}

